@@ -8,7 +8,7 @@
 hbase.class=org.apache.hadoop.metrics.spi.NullContext
 
 # Configuration of the "hbase" context for file
-# hbase.class=org.apache.hadoop.metrics.file.FileContext
+# hbase.class=org.apache.hadoop.hbase.metrics.file.TimeStampingFileContext
 # hbase.period=10
 # hbase.fileName=/tmp/metrics_hbase.log
 
@@ -21,7 +21,7 @@ hbase.class=org.apache.hadoop.metrics.spi.NullContext
 jvm.class=org.apache.hadoop.metrics.spi.NullContext
 
 # Configuration of the "jvm" context for file
-# jvm.class=org.apache.hadoop.metrics.file.FileContext
+# jvm.class=org.apache.hadoop.hbase.metrics.file.TimeStampingFileContext
 # jvm.period=10
 # jvm.fileName=/tmp/metrics_jvm.log
 
@@ -31,10 +31,10 @@ jvm.class=org.apache.hadoop.metrics.spi.NullContext
 # jvm.servers=GMETADHOST_IP:8649
 
 # Configuration of the "rpc" context for null
-hbase.class=org.apache.hadoop.metrics.spi.NullContext
+rpc.class=org.apache.hadoop.metrics.spi.NullContext
 
 # Configuration of the "rpc" context for file
-# rpc.class=org.apache.hadoop.metrics.file.FileContext
+# rpc.class=org.apache.hadoop.hbase.metrics.file.TimeStampingFileContext
 # rpc.period=10
 # rpc.fileName=/tmp/metrics_rpc.log
 
