@@ -81,6 +81,7 @@ Release 0.19.0 - Unreleased
                durring a memcache flush
    HBASE-1009  Master stuck in loop wanting to assign but regions are closing
    HBASE-1016  Fix example in javadoc overvie
+   HBASE-1021  hbase metrics FileContext not working
       
   IMPROVEMENTS
    HBASE-901   Add a limit to key length, check key and value length on client side
